--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 
 body{
   width:100%;
-  background:url("/background.jpg");
+  background:url("background.jpg");
   background-position: center;
   background-size: cover;
   height:110vh;
